# telegram-lunch-bot

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DOCS.md  Deploy  Dockerfile  Makefile  README.md  admin_notify.py  bot.py  config.py  database.py  fly.toml  image_summary.py  main.py  pyproject.toml  railway.toml  requirements.txt  scheduler.py
assets/fonts/: README.md
docs/superpowers/plans/: 2026-05-20-evening-vote-schedule.md  2026-06-25-friday-bun-dau.md  2026-06-26-bun-dau-per-dish-pricing.md  2026-06-26-friday-default-menu.md  2026-07-02-friday-carryover-menu.md  2026-07-02-friday-evening-vote-open.md
docs/superpowers/specs/: 2026-05-20-evening-vote-schedule-design.md  2026-06-02-admin-vote-notifications-design.md  2026-06-02-summary-image-design.md  2026-06-25-friday-bun-dau-design.md  2026-06-26-bun-dau-per-dish-pricing-design.md  2026-06-26-friday-default-menu-design.md  2026-07-02-friday-carryover-menu-design.md  2026-07-02-friday-evening-vote-open-design.md
handlers/: admin.py  help.py  menu.py  payment.py  qr.py  summary.py  vote.py
tests/: conftest.py  test_admin_notify.py  test_database.py  test_handlers.py  test_image_summary.py  test_scheduler.py  test_web.py
web/: app.py
web/templates/: index.html
