[project]
name = "telegram-lunch-bot"
version = "1.0.0"
description = "Telegram bot quản lý đặt cơm trưa cho nhóm"
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot==21.6",
    "aiosqlite==0.20.0",
    "APScheduler==3.10.4",
    "python-dotenv==1.0.1",
    "pytz==2024.1",
    "fastapi==0.115.5",
    "uvicorn==0.32.1",
    "jinja2==3.1.4",
    "python-multipart==0.0.17",
    "anthropic>=0.40.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
